# McGillDiscordProject

./: .replit  README.md  archive.py  gitingore.py  main.py  pyproject.toml  requirements.txt  setup.sh  verifysystem.py
cogs/: credits.py  verifysystem.py
